[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "geppetto"
version = "0.2.5"
authors = [
    "Lucas Arbues <lucas.arbues@coinfabrik.com>",
    "Ignacio Peña <ignacio.penia@coinfabrik.com>",
    "Federico Patagua <federico.patagua@coinfabrik.com>",
    "Arturo Beccar <arturo.beccar@coinfabrik.com>",
    "José Garcia Crosta <jose.garcia.crosta@coinfabrik.com>",
    "David Weil <david.weil@coinfabrik.com>",
    "Diego Kelyacoubian <diego.kelyacoubian@coinfabrik.com>",
    "Sebastian Wain <sebastian.wain@coifabrik.com>",
    "Carlos Sims <carlos.sims@coinfabrik.com>",
    "Camila Gallo Garcia <camila.garcia@coinfabrik.com>"
]
description = "Geppetto is a sophisticated Slack bot that facilitates seamless interaction with multiple AI models, including OpenAI's ChatGPT, DALL-E, Claude and Google's Gemini model."
readme = "README.md" 
classifiers = [
    "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.6",
        "Topic :: Chatbot",
]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2024.2.2"
openai = "^1.4.0"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.1"
slack-sdk = "^3.26.1"
Pillow = "^10.1.0"
google-generativeai = "^0.7.2"
IPython = "^8.0.0"
unittest-xml-reporting = "^3.2.0"
anthropic = "^0.32.0"

[tool.poetry.scripts]
geppetto = "geppetto.main:main"

[project.urls]
Homepage = "https://github.com/Deeptechia/geppetto"
Issues = "https://github.com/Deeptechia/geppetto/issues"
